src/assets/scss/components/site-footer.scss
.site-footer {
  width: 100%;
  max-width: var(--site-width);
  margin: auto auto 0;
  padding: 76px 24px 12px;
  background: none;
  box-shadow: none;
  border: none;
  text-align: center;
}

.site-footer small {
  display: block;
  width: 100%;
  padding-top: 16px;
  border-top: 1px solid var(--color-border-dark);
  font-size: 1.2rem;
  line-height: 1.5;
}

.site-footer a {
  color: var(--color-secondary);

  &:hover,
  &:focus {
    color: var(--color-secondary);
    border-color: var(--color-secondary);
  }
}

